# learn-rust

./: .gitignore  Cargo.toml  README.md  index.html  package.json
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
advent_of_code/: Cargo.toml
advent_of_code/src/: lib.rs  main.rs
advent_of_code/src/algorithm/: dictionary.rs  graph.rs  mod.rs
advent_of_code/src/aoc2017/: day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day18_2.rs  day19.rs  day20.rs  day20_2.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day25_data.json  day9.rs  mod.rs
advent_of_code/src/aoc2018/: 1.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs
advent_of_code/src/aoc2020/: 1.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  2.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs
advent_of_code/src/aoc2020/data/: 4.txt
advent_of_code/src/aoc2021/: 1.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  2.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs
advent_of_code/src/aoc2022/: 1.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs
advent_of_code/src/geometry/: mod.rs
exercises/: Cargo.toml
exercises/src/: fibonacci.rs
gui/: Cargo.toml
gui/src/: main.rs
src/: impl_trait.rs  index.js  lib.rs  main.rs
src/adventofcode/: a2017_2.rs  mod.rs
src/print/: mod.rs
src/thread/: mod.rs
src/url/: mod.rs
wasm/: Cargo.toml  README.md  build.sh  index.html
wasm/client/: Cargo.toml  build.sh
wasm/client/src/: lib.rs
wasm/src/: lib.rs  main.rs
