[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["msyfls123 <m18771058712@live.com>"]
edition = "2018"

[dependencies]
regex = "1.3.4"
lazy_static = "1.4.0"

[[bin]]
name = "2017-9"
path = "src/aoc2017/day9.rs"

[[bin]]
name = "2017-10"
path = "src/aoc2017/day10.rs"

[[bin]]
name = "2017-11"
path = "src/aoc2017/day11.rs"

[[bin]]
name = "2017-12"
path = "src/aoc2017/day12.rs"

[[bin]]
name = "2017-13"
path = "src/aoc2017/day13.rs"

[[bin]]
name = "2017-14"
path = "src/aoc2017/day14.rs"

[[bin]]
name = "2017-15"
path = "src/aoc2017/day15.rs"

[[bin]]
name = "2017-16"
path = "src/aoc2017/day16.rs"

[[bin]]
name = "2017-17"
path = "src/aoc2017/day17.rs"

[[bin]]
name = "2017-18"
path = "src/aoc2017/day18.rs"

[[bin]]
name = "2017-19"
path = "src/aoc2017/day19.rs"

[[bin]]
name = "2017-20"
path = "src/aoc2017/day20.rs"