[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["msyfls123 <m18771058712@live.com>"]
edition = "2018"

[dependencies]
regex = "1.3.4"
lazy_static = "1.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4.19"
itertools = "0.10.0"
num = "0.4.0"
threadpool = "1.8.1"
modinverse = "0.1.1"

[[bin]]
name = "aoc"
path = "src/main.rs"

[[bin]]
name = "2017-9"
path = "src/aoc2017/day9.rs"

[[bin]]
name = "2017-10"
path = "src/aoc2017/day10.rs"

[[bin]]
name = "2017-11"
path = "src/aoc2017/day11.rs"

[[bin]]
name = "2017-12"
path = "src/aoc2017/day12.rs"

[[bin]]
name = "2017-13"
path = "src/aoc2017/day13.rs"

[[bin]]
name = "2017-14"
path = "src/aoc2017/day14.rs"

[[bin]]
name = "2017-15"
path = "src/aoc2017/day15.rs"

[[bin]]
name = "2017-16"
path = "src/aoc2017/day16.rs"

[[bin]]
name = "2017-17"
path = "src/aoc2017/day17.rs"

[[bin]]
name = "2017-18"
path = "src/aoc2017/day18.rs"

[[bin]]
name = "2017-19"
path = "src/aoc2017/day19.rs"

[[bin]]
name = "2017-20"
path = "src/aoc2017/day20.rs"

[[bin]]
name = "2017-21"
path = "src/aoc2017/day21.rs"

[[bin]]
name = "2017-22"
path = "src/aoc2017/day22.rs"

[[bin]]
name = "2017-23"
path = "src/aoc2017/day23.rs"

[[bin]]
name = "2017-24"
path = "src/aoc2017/day24.rs"

[[bin]]
name = "2017-25"
path = "src/aoc2017/day25.rs"


[[bin]]
name = "2018-1"
path = "src/aoc2018/1.rs"

[[bin]]
name = "2018-2"
path = "src/aoc2018/2.rs"

[[bin]]
name = "2018-3"
path = "src/aoc2018/3.rs"

[[bin]]
name = "2018-4"
path = "src/aoc2018/4.rs"

[[bin]]
name = "2018-5"
path = "src/aoc2018/5.rs"

[[bin]]
name = "2018-6"
path = "src/aoc2018/6.rs"

[[bin]]
name = "2018-7"
path = "src/aoc2018/7.rs"

[[bin]]
name = "2018-8"
path = "src/aoc2018/8.rs"

[[bin]]
name = "2018-9"
path = "src/aoc2018/9.rs"

[[bin]]
name = "2018-10"
path = "src/aoc2018/10.rs"

[[bin]]
name = "2018-11"
path = "src/aoc2018/11.rs"

[[bin]]
name = "2018-12"
path = "src/aoc2018/12.rs"

[[bin]]
name = "2018-13"
path = "src/aoc2018/13.rs"

[[bin]]
name = "2018-14"
path = "src/aoc2018/14.rs"

[[bin]]
name = "2018-15"
path = "src/aoc2018/15.rs"

[[bin]]
name = "2020-1"
path = "src/aoc2020/1.rs"

[[bin]]
name = "2020-2"
path = "src/aoc2020/2.rs"

[[bin]]
name = "2020-3"
path = "src/aoc2020/3.rs"

[[bin]]
name = "2020-4"
path = "src/aoc2020/4.rs"

[[bin]]
name = "2020-5"
path = "src/aoc2020/5.rs"

[[bin]]
name = "2020-6"
path = "src/aoc2020/6.rs"

[[bin]]
name = "2020-7"
path = "src/aoc2020/7.rs"

[[bin]]
name = "2020-8"
path = "src/aoc2020/8.rs"

[[bin]]
name = "2020-9"
path = "src/aoc2020/9.rs"

[[bin]]
name = "2020-10"
path = "src/aoc2020/10.rs"

[[bin]]
name = "2020-11"
path = "src/aoc2020/11.rs"

[[bin]]
name = "2020-12"
path = "src/aoc2020/12.rs"

[[bin]]
name = "2020-13"
path = "src/aoc2020/13.rs"

[[bin]]
name = "2020-14"
path = "src/aoc2020/14.rs"

[[bin]]
name = "2020-15"
path = "src/aoc2020/15.rs"

[[bin]]
name = "2020-16"
path = "src/aoc2020/16.rs"

[[bin]]
name = "2020-17"
path = "src/aoc2020/17.rs"

[[bin]]
name = "2020-18"
path = "src/aoc2020/18.rs"

[[bin]]
name = "2020-19"
path = "src/aoc2020/19.rs"

[[bin]]
name = "2020-20"
path = "src/aoc2020/20.rs"

[[bin]]
name = "2020-21"
path = "src/aoc2020/21.rs"

[[bin]]
name = "2020-22"
path = "src/aoc2020/22.rs"

[[bin]]
name = "2020-23"
path = "src/aoc2020/23.rs"

[[bin]]
name = "2020-24"
path = "src/aoc2020/24.rs"

[[bin]]
name = "2020-25"
path = "src/aoc2020/25.rs"
