[package]
name = "wasm"
version = "0.1.0"
authors = ["msyfls123 <msyfls123@gmail.com>"]
edition = "2018"

[workspace]
members = [
  "./",
  "client",
]
default-members = [
  "./",
  "client",
]


[[bin]]
name = "wasm_bin"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
name = "wasm"

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"
wasm-bindgen = "0.2.53"
js-sys = "0.3.14"
virtual-dom-rs = "0.6"
css-rs-macro = "0.1"
serde = { version = "1", features = ["rc", "derive"] }
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "MouseEvent",
    "Window",
    "console"
]
