[package]
name = "wasm_client"
version = "0.1.0"
authors = ["msyfls123 <msyfls123@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"] # Don't forget this!

[dependencies]
wasm-bindgen = "0.2.53"
js-sys = "0.3.14"
percy-dom = "0.7"
wasm = { path = "../" }
getrandom = { version = "0.2.8", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "MouseEvent",
    "Window",
    "console"
]
